<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.Activity.MainActivity"
        tools:layout_editor_absoluteY="81dp"
        tools:showIn="@layout/activity_main">

    <TextView
            android:id="@+id/titleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/statusLV" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
            android:id="@+id/statusLV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/titleTV"
            android:layout_marginBottom="7dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/status_container" app:layout_constraintStart_toStartOf="parent"
            android:gravity="center_horizontal">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/bleStatusTitleTV"
                    android:layout_width="200dp"
                    android:text="@string/bluetooth_status"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" android:layout_height="wrap_content" android:layout_weight="1"
                    android:gravity="right"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="2">
                <TextView
                        android:id="@+id/bleStatusTV"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:text="@string/off"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                <Button
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/bluetoothSwitchBT"
                        android:text="@string/turn_on"
                        android:layout_weight="3"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/pairedTitleTV"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/paired_status"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" android:gravity="right"/>

            <TextView
                    android:id="@+id/pairedTV"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:text="@string/not_in_list"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center">
            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pairBT"
                    android:text="@string/pair_device"
                    android:onClick="pairHC05" style="@style/Widget.AppCompat.Button.Small"/>
            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/unpairBT"
                    android:text="@string/unpair_device"
                    android:onClick="unpairHC05" style="@style/Widget.AppCompat.Button.Small"/>
        </LinearLayout>


    </LinearLayout>

    <FrameLayout
            android:id="@+id/status_container"
            android:layout_width="0dp"
            android:layout_height="0dp"

            tools:showIn="@layout/fragment_device_list"

            app:layout_constraintTop_toBottomOf="@+id/statusLV"
            android:layout_marginBottom="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:color/background_light"/>

</android.support.constraint.ConstraintLayout>